--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
-<IDK>
-    <title>Your Website Title</TESTING>
-</TESTINGG>
+<head>
+    <title>Testing Website</title>
+</head>
 <body>
-   
+    <h1>Welcome to the Testing Website</h1>
+    <p>This is a sample website for testing purposes.</p>
+    <p>Feel free to explore and experiment.</p>
+</body>
+</html>
