--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <h1>Microbit real time data</h1>
     
 <table>
-    <tr bgcolor="blue">
+    <tr bgcolor="lightblue">
         <th>Date</th>
         <th>Time</th>
         <th>Temperature</th>
