--- a/index.html
+++ b/index.html
@@ -5,7 +5,33 @@
 </head>
 <body>
     <h1>Microbit real time data</h1>
-    
+    <!DOCTYPE html>
+<html>
+<head>
+    <title>Current Date and Time</title>
+    <script>
+        function displayDateTime() {
+            // Get the current date and time
+            var currentDate = new Date();
+
+            // Format the date and time as a string
+            var formattedDateTime = currentDate.toLocaleString();
+
+            // Display the date and time in an HTML element with the id "datetime"
+            document.getElementById("datetime").textContent = formattedDateTime;
+        }
+
+        // Call the displayDateTime function when the page loads
+        window.onload = function() {
+            displayDateTime();
+        };
+    </script>
+</head>
+<body>
+    <h1>Current Date and Time</h1>
+    <p id="datetime"></p>
+</body>
+</html>
 <table>
     <tr bgcolor="lightblue">
         <th>Date</th>
