--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <!DOCTYPE html>
 <html>
 <head>
-    <title>Current Date and Time</title>
     <script>
         function displayDateTime() {
             // Get the current date and time
@@ -39,7 +38,8 @@
         <th>Temperature</th>
     </tr>
     <tr bgcolor="lightblue> 
-        <tr></tr>
+        <td>function() {
+            displayDateTime();</tr>
     </tr>
 </table>
     
