--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             var dateCell = document.createElement("td");
             dateCell.textContent = formattedDateTime;
             var dataCell = document.createElement("td");
-            // Replace "YOUR_REAL_TIME_DATA" with the actual real-time data you want to display
-            dataCell.textContent = YOUR_REAL_TIME_DATA;
+            // Replace this with the actual real-time data you want to display
+            dataCell.textContent = "Real-Time Data";
 
             // Append the cells to the new row
             newRow.appendChild(dateCell);
