--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             dateCell.textContent = formattedDateTime;
             var dataCell = document.createElement("td");
             // Replace this with the actual real-time data you want to display
-            dataCell.textContent = "Real-Time Data";
+            dataCell.textContent = "Temperature";
 
             // Append the cells to the new row
             newRow.appendChild(dateCell);
