--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Real-Time Data Table</title>
+    <title>Microbit Real Time Data</title>
     <script>
         function updateTable() {
             // Get the current date and time
@@ -34,7 +34,7 @@
     </script>
 </head>
 <body>
-    <h1>Real-Time Data Table</h1>
+    <h1>Microbit Real Time Data</h1>
     <table>
         <thead>
             <tr>
