--- a/index.html
+++ b/index.html
@@ -17,8 +17,18 @@
             var dateCell = document.createElement("td");
             dateCell.textContent = formattedDateTime;
             var dataCell = document.createElement("td");
+
+            function getRandomNumber() {
+                var numbers = [29,30,31,32,33]
+                var randomIndex = Math. floor(Math.random()*numbers length);
+                var randomNumber = numbers[randomIndex];
+                return randomNumber;
+            }
+
+            function displayRandomNumber(){
+                var randomNumber = getRandomNumber();
             // Replace this with the actual real-time data you want to display
-            dataCell.textContent = "Temperature";
+            dataCell.textContent = randomNumber ;
 
             // Append the cells to the new row
             newRow.appendChild(dateCell);
