--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <thead>
             <tr>
                 <th>Date and Time</th>
-                <th>Data</th>
+                <th>Temperature</th>
             </tr>
         </thead>
         <tbody id="table-body">
