--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         <thead>
             <tr>
                 <th>Date and Time</th>
+                <td>Temperature</td>
             </tr>
         </thead>
         <tbody id="table-body">
