--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Real-Time Time and Temperature</title>
+    <title>Microbit Real Time Data</title>
     <script>
         function getCurrentTime() {
             var currentTime = new Date();
