--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </script>
 </head>
 <body>
-    <h1>Real-Time Time and Temperature</h1>
+    <h1>Microbit Real time data</h1>
     <table id="data-table">
         <thead>
             <tr>
