--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    
     <title>Microbit Real Time Data</title>
     <script>
         function getCurrentTime() {
@@ -31,13 +32,14 @@
         setInterval(updateTable, 5000);
     </script>
 </head>
+    <link>
 <body>
     <h1>Microbit Real time data</h1>
     <table id="data-table">
         <thead>
             <tr>
-                <th>Time</th>
-                <th>Temperature</th>
+                <th>Time</th> {font-size: 200%;}
+                <th>Temperature</th> {font-size: 200%;}
             </tr>
         </thead>
         <tbody>
