--- a/index.html
+++ b/index.html
@@ -38,8 +38,12 @@
     <table id="data-table">
         <thead>
             <tr>
-                <th>Time</th> {font-size: 200%;}
-                <th>Temperature</th> {font-size: 200%;}
+                <th>Time</th> {font-size:
+                200%;
+                }
+                <th>Temperature</th> {font-size: 
+                200%;
+                }
             </tr>
         </thead>
         <tbody>
