--- a/index.html
+++ b/index.html
@@ -36,14 +36,10 @@
 <body>
     <h1>Microbit Real time data</h1>
     <table id="data-table">
-        <thead>
+        <thead> 
             <tr>
-                <th>Time</th> {font-size:
-                200%;
-                }
-                <th>Temperature</th> {font-size: 
-                200%;
-                }
+                <th style="font-size 200%;">Time</th> 
+                <th style="font-size 200%;">Temperature</th> 
             </tr>
         </thead>
         <tbody>
