--- a/index.html
+++ b/index.html
@@ -17,25 +17,9 @@
             margin-bottom: 20px;
         }
 
-        table {
-            border-collapse: collapse;
-            width: 100%;
-        }
-
-        th, td {
-            border: 1px solid #ddd;
-            padding: 8px;
-            text-align: center;
-            font-size: 14px;
-        }
-
-        th {
-            font-weight: bold;
-        }
-
-        th:not(:first-child),
-        td:not(:first-child) {
-            padding-left: 15px;
+        canvas#chart {
+            display: block;
+            margin: 0 auto;
         }
     </style>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
@@ -51,57 +35,19 @@
             return temperatures[randomIndex];
         }
 
-        function getRandomAlcohol() {
-            var alcohol = Math.floor(Math.random() * (130 - 100 + 1)) + 100;
-            return alcohol;
-        }
-
-        function getRandomHeartRate() {
-            var heartRate = Math.floor(Math.random() * (90 - 70 + 1)) + 70;
-            return heartRate;
-        }
-
-        function updateTable() {
-            var currentTime = getCurrentTime();
+        function updateChart() {
             var temperature = getRandomTemperature();
-            var alcohol = getRandomAlcohol();
-            var heartRate = getRandomHeartRate();
 
-            var table = document.getElementById("data-table");
-            var newRow = table.insertRow();
-
-            var timeCell = newRow.insertCell();
-            timeCell.textContent = currentTime;
-
-            var temperatureCell = newRow.insertCell();
-            temperatureCell.textContent = temperature;
-
-            var alcoholCell = newRow.insertCell();
-            alcoholCell.textContent = alcohol;
-
-            var heartRateCell = newRow.insertCell();
-            heartRateCell.textContent = heartRate;
+            chart.data.labels.push('');
+            chart.data.datasets[0].data.push(temperature);
+            chart.update();
         }
 
-        setInterval(updateTable, 5000);
+        setInterval(updateChart, 5000);
     </script>
 </head>
 <body>
     <h1>Arduino Real-time Data</h1>
-    <div class="container">
-        <table id="data-table">
-            <thead>
-                <tr>
-                    <th>Time</th>
-                    <th>Temperature</th>
-                    <th>Alcohol</th>
-                    <th>Heart Rate</th>
-                </tr>
-            </thead>
-            <tbody>
-            </tbody>
-        </table>
-    </div>
     <canvas id="chart"></canvas>
     <script>
         var ctx = document.getElementById("chart").getContext("2d");
@@ -127,16 +73,6 @@
                 }
             }
         });
-
-        function updateChart() {
-            var temperature = getRandomTemperature();
-
-            chart.data.labels.push('');
-            chart.data.datasets[0].data.push(temperature);
-            chart.update();
-        }
-
-        setInterval(updateChart, 5000);
     </script>
 </body>
 </html>
