--- a/index.html
+++ b/index.html
@@ -12,57 +12,94 @@
             margin-bottom: 20px;
         }
 
-        canvas#chart {
-            display: block;
-            margin: 0 auto;
+        .container {
+            max-width: 600px;
+            margin-bottom: 20px;
+        }
+
+        table {
+            border-collapse: collapse;
+            width: 100%;
+        }
+
+        th, td {
+            border: 1px solid #ddd;
+            padding: 8px;
+            text-align: center;
+            font-size: 14px;
+        }
+
+        th {
+            font-weight: bold;
+        }
+
+        th:not(:first-child),
+        td:not(:first-child) {
+            padding-left: 15px;
         }
     </style>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script>
+        function getCurrentTime() {
+            var currentTime = new Date();
+            return currentTime.toLocaleTimeString();
+        }
+
         function getRandomTemperature() {
             var temperatures = [29, 30, 31, 32, 33];
             var randomIndex = Math.floor(Math.random() * temperatures.length);
             return temperatures[randomIndex];
         }
 
-        function updateChart() {
-            var temperature = getRandomTemperature();
-
-            chart.data.labels.push('');
-            chart.data.datasets[0].data.push(temperature);
-            chart.update();
+        function getRandomAlcohol() {
+            var alcohol = Math.floor(Math.random() * (130 - 100 + 1)) + 100;
+            return alcohol;
         }
 
-        setInterval(updateChart, 5000);
+        function getRandomHeartRate() {
+            var heartRate = Math.floor(Math.random() * (90 - 70 + 1)) + 70;
+            return heartRate;
+        }
+
+        function updateTable() {
+            var currentTime = getCurrentTime();
+            var temperature = getRandomTemperature();
+            var alcohol = getRandomAlcohol();
+            var heartRate = getRandomHeartRate();
+
+            var table = document.getElementById("data-table");
+            var newRow = table.insertRow();
+
+            var timeCell = newRow.insertCell();
+            timeCell.textContent = currentTime;
+
+            var temperatureCell = newRow.insertCell();
+            temperatureCell.textContent = temperature;
+
+            var alcoholCell = newRow.insertCell();
+            alcoholCell.textContent = alcohol;
+
+            var heartRateCell = newRow.insertCell();
+            heartRateCell.textContent = heartRate;
+        }
+
+        setInterval(updateTable, 5000);
     </script>
 </head>
 <body>
     <h1>Arduino Real-time Data</h1>
-    <canvas id="chart"></canvas>
-    <script>
-        var ctx = document.getElementById("chart").getContext("2d");
-        var temperatureData = [];
-
-        var chart = new Chart(ctx, {
-            type: 'bar',
-            data: {
-                labels: [],
-                datasets: [{
-                    label: 'Temperature',
-                    data: temperatureData,
-                    backgroundColor: 'rgba(75, 192, 192, 0.2)',
-                    borderColor: 'rgba(75, 192, 192, 1)',
-                    borderWidth: 1
-                }]
-            },
-            options: {
-                scales: {
-                    y: {
-                        beginAtZero: true
-                    }
-                }
-            }
-        });
-    </script>
+    <div class="container">
+        <table id="data-table">
+            <thead>
+                <tr>
+                    <th>Time</th>
+                    <th>Temperature</th>
+                    <th>Alcohol</th>
+                    <th>Heart Rate</th>
+                </tr>
+            </thead>
+            <tbody>
+            </tbody>
+        </table>
+    </div>
 </body>
 </html>
