--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
             font-weight: bold;
             font-size: 18px;
             margin-top: 20px;
+            position: fixed;
+            bottom: 0;
+            left: 50%;
+            transform: translateX(-50%);
         }
     </style>
     <script>
@@ -104,7 +108,6 @@
     </div>
     <div class="normal-text">
         NORMAL
-       </div>
     </div>
 </body>
 </html>
