--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
         }
 
         .normal-text {
-            text-align: center;
+            text-align: left;
             font-weight: bold;
             font-size: 18px;
             margin-top: 20px;
             position: fixed;
             bottom: 0;
-            left: 50%;
-            transform: translateX(-50%);
+            left: 0;
+            margin-left: 20px;
         }
     </style>
     <script>
