--- a/index.html
+++ b/index.html
@@ -33,14 +33,12 @@
         }
 
         .normal-text {
-            text-align: left;
+            position: absolute;
+            bottom: 0;
+            left: 20px;
             font-weight: bold;
             font-size: 18px;
-            margin-top: 20px;
-            position: fixed;
-            bottom: 0;
-            left: 0;
-            margin-left: 20px;
+            margin-bottom: 20px;
         }
     </style>
     <script>
