--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
         th {
             font-weight: bold;
         }
+
+        .normal-text {
+            text-align: center;
+            font-weight: bold;
+        }
     </style>
     <script>
         function getCurrentTime() {
@@ -79,6 +84,9 @@
             <tbody>
             </tbody>
         </table>
+    </div>
+    <div class="normal-text">
+        NORMAL
     </div>
 </body>
 </html>
