--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         th {
             font-weight: bold;
         }
-
+        
         .normal-text {
             text-align: center;
             font-weight: bold;
@@ -86,7 +86,7 @@
         </table>
     </div>
     <div class="normal-text">
-        NORMAL
+        <h2>NORMAL</h2>
     </div>
 </body>
 </html>
