--- a/index.html
+++ b/index.html
@@ -31,10 +31,11 @@
         th {
             font-weight: bold;
         }
-        
+
         .normal-text {
             text-align: center;
             font-weight: bold;
+            margin-top: 20px;
         }
     </style>
     <script>
@@ -86,7 +87,7 @@
         </table>
     </div>
     <div class="normal-text">
-        <h2>NORMAL</h2>
+        NORMAL
     </div>
 </body>
 </html>
