--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             text-align: center;
             font-weight: bold;
             margin-top: 20px;
+            display: none;
         }
     </style>
     <script>
@@ -69,6 +70,11 @@
             }
         }
 
+        setTimeout(function() {
+            var normalText = document.getElementById("normal-text");
+            normalText.style.display = "block";
+        }, 5000);
+
         setInterval(updateTable, 5000);
     </script>
 </head>
@@ -85,7 +91,7 @@
             <tbody>
             </tbody>
         </table>
-        <div class="normal-text">
+        <div class="normal-text" id="normal-text">
             NORMAL
         </div>
     </div>
