--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             text-align: center;
             font-weight: bold;
             margin-top: 20px;
-            display: none;
+            visibility: hidden;
         }
     </style>
     <script>
@@ -72,7 +72,7 @@
 
         setTimeout(function() {
             var normalText = document.getElementById("normal-text");
-            normalText.style.display = "block";
+            normalText.style.visibility = "visible";
         }, 5000);
 
         setInterval(updateTable, 5000);
